# DEPI3_OurProject

./: README.md  requirements.txt
App/: streamlit_app.py
Data/: stroke_data_cleaned.csv
Notebooks/: 1_data_exploration.ipynb  2_data_analysis.ipynb  3_ML.ipynb
Reports/: 2. Data Analysis Report.docx  Data Exploration Report.docx  Predictive Model Performance Report.docx  ~$ta Exploration Report.docx  ~WRL2687.tmp
healthcare_predictions/: .gitignore  Dockerfile  pyproject.toml
healthcare_predictions/App/: streamlit_app.py
healthcare_predictions/Models/: Logistic_Regression_Tuned.pkl  preprocessor.pkl
healthcare_predictions/Notebooks/: 1_data_exploration.ipynb  2_data_analysis.ipynb  3_ML.ipynb  4_inference.ipynb
healthcare_predictions/src/healthcare_predictions/: server.py
healthcare_predictions/src/healthcare_predictions/UI/: streamlit_app.py
healthcare_predictions/src/healthcare_predictions/server/: config.py  server.py
healthcare_predictions/src/healthcare_predictions/serverTypes/: server_types.py
healthcare_predictions/tests/: unit_tests.py
