[project]
name = "healthcare-predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "OmarAyman",email = "omaraymanzaid1122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "healthcare_predictions", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
