[project]
name = "healthcare-predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "OmarAyman",email = "omaraymanzaid1122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "healthcare_predictions", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
prod = [
    "scikit-learn (>=1.7.2,<2.0.0)"
]
dev = [
    "matplotlib (>=3.10.7,<4.0.0)"
]
